--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "mixpanel-browser": "^2.45.0",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
     "@types/mixpanel-browser": "^2.38.0",
