--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.183",
     "@types/mixpanel-browser": "^2.38.0",
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
