--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "firebase": "^9.7.0",
+    "flowbite": "^1.4.7",
+    "flowbite-react": "^0.0.25",
     "mixpanel-browser": "^2.45.0",
     "next": "12.1.5",
     "react": "18.1.0",
